k8s-dev/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: docker-hub-secret
      containers:
        - name: backend
          image: worldfellow/cibackend:latest
          imagePullPolicy: Always
      ports:
        - containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: dev
spec:
  selector:
    app: backend
  ports:
  - port: 9080
    targetPort: 9080
  type: ClusterIP
