k8s-dev/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: docker-hub-secret
      containers:
        - name: frontend
          image: worldfellow/cifrontend:latest
          imagePullPolicy: Always
      ports:
        - containerPort: 90
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: dev
spec:
  selector:
    app: frontend
  ports:
  - port: 90
    targetPort: 90
  type: LoadBalancer
