k8s-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: public
  rules:
  - http:
      paths:
      # ✅ API FIRST (MOST IMPORTANT)
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 9080

      # ✅ FRONTEND LAST
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 90
